# clinical-llm

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: baseline_llm.yaml  baseline_logreg.yaml  baseline_lstm.yaml  baseline_xgboost.yaml
data/: README.md
data/synthetic/: patients.csv
docs/: design.md  getting_started.md  results.md
src/clinical_llm/data/: features.py  physionet2012_downloader.py  physionet2012_loader.py  sequences.py  serialisation.py  splits.py  synthetic_generator.py
src/clinical_llm/evaluation/: metrics.py
src/clinical_llm/models/: baselines.py  llm.py  lstm.py
src/clinical_llm/training/: __init__.py  train.py
tests/: test_llm_baseline.py  test_lstm_baseline.py  test_metrics.py  test_physionet2012_loader.py  test_sequence_dataset.py  test_serialisation.py  test_synthetic_generator.py  test_xgboost_baseline.py
