[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-llm"
version = "0.1.0"
description = "Fine-tuning open LLMs on clinical sequences for outcome prediction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Z. Awan" }]
keywords = ["clinical-nlp", "llm", "mimic-iv", "ehr", "healthcare-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "torch>=2.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
llm = [
    "transformers>=4.40",
    "peft>=0.10",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "datasets>=2.18",
]
interpret = [
    "shap>=0.45",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
app = [
    "streamlit>=1.32",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.9",
]
all = [
    "clinical-llm[llm,interpret,app,dev]",
]

[project.urls]
Homepage = "https://github.com/z-awan-lab/clinical-llm"
Issues   = "https://github.com/z-awan-lab/clinical-llm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=clinical_llm --cov-report=term-missing"
